--- a/07.13/style.css
+++ b/07.13/style.css
@@ -317,3 +317,287 @@ button {
 	top: 350px;
 	right: 80px;
 }
+
+/*Forest*/
+#forest1 {
+    width: 100%;
+    height: 1050px;
+    background-image: url(img/forest/forest1/forest1_bg.png);
+}
+
+/*absolute와 float 정리*/
+.leftTree {
+    position: absolute;
+    width: 445px;
+    height: 1200px;
+    background-image: url(img/forest/forest1/lefttree.png);
+    left: 0;
+}
+
+.treeWrap {
+    float: right;
+    position: relative;
+    width: 304px;
+    height: 572px;
+    top: 100px;
+}
+
+.rightTree {
+    position: absolute;
+    width: 304px;
+    height: 572px;
+    background-image: url(img/forest/forest1/righttree.png);
+    z-index: 10;
+}
+
+.rabbit1 {
+    position: absolute;
+    width: 82px;
+    height: 103px;
+    background-image: url(img/forest/forest1/rabbit1.png);
+    margin: 435px 0 0 107px;
+}
+
+.rabbit2 {
+    position: absolute;
+    width: 56px;
+    height: 75px;
+    background-image: url(img/forest/forest1/rabbit2.png);
+    margin: 435px 0 0 200px;
+}
+
+/*Forest2*/
+#forest2 {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background-image: url(img/forest/forest2/forest2_bg.png);
+}
+
+.frog {
+    position: absolute;
+    width: 153px;
+    height: 257px;
+    background-image: url(img/forest/forest2/frog.png);
+    margin: 50px 0 0 100px;
+}
+
+.machineWrap2 {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    left: 50%;
+    margin-left: -200px;
+    top: 180px;
+}
+
+.machineBottom {
+    position: absolute;
+    width: 374px;
+    height: 162px;
+    background-image: url(img/forest/forest2/machinebottom.png);
+    margin-top: 220px;
+    z-index: 200;
+}
+
+.machineLeft {
+    position: absolute;
+    width: 123px;
+    height: 228px;
+    background-image: url(img/forest/forest2/machineleft.png);
+    margin-top: 30px;
+    z-index: 200;
+}
+
+.machineRight {
+    position: absolute;
+    width: 123px;
+    height: 248px;
+    background-image: url(img/forest/forest2/machineright.png);
+    margin: 10px 0 0 260px;
+    z-index: 200;
+}
+
+.forestBubble {
+    position: relative;
+    float: right;
+    top: 100px;
+    margin-left: 100px;
+}
+
+.forest2Tree {
+    float: left;
+    position: relative;
+    width: 304px;
+    height: 282px;
+    background-image: url(img/forest/forest2/forest2tree.png);
+    top: 50px;
+}
+
+/*Forest3*/
+#forest3 {
+    width: 100%;
+    height: 600px;
+    background-image: url(img/forest/forest3/forest3_bg.png);
+}
+
+.forest3Wrap {
+    float: right;
+    position: relative;
+    width: 354px;
+    height: 440px;
+    top: 100px;
+}
+
+.forest3Tree {
+    position: absolute;
+    width: 354px;
+    height: 440px;
+    background-image: url(img/forest/forest3/forest3tree.png);
+}
+
+.smallBird {
+    position: absolute;
+    width: 40px;
+    height: 35px;
+    background-image: url(img/forest/forest3/bird_sm.png);
+    top: 120px;
+    left: 125px;
+    /*부모영역인 forest3Wrap가 relative가 아니라면 브라우저 기준으로 위치를잡게된다.
+	  3차원 성격인 relative이므로 부모를 기준으로 위치를 잡게된다.*/
+}
+
+.bigBird {
+    position: absolute;
+    width: 83px;
+    height: 80px;
+    background-image: url(img/forest/forest3/bird_big.png);
+    /*margin 값은 부모의 속성 영향받지 않고 배치할 수 있다.*/
+    margin: 280px 0 0 94px;
+}
+
+/*Sience*/
+
+#science {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/science/science_bg.png);
+}
+
+.scienceWrap {
+    position: relative;
+    width: 1068px;
+    height: 655px;
+    margin: 0 auto;
+}
+
+.scienceLeftWrap {
+    float: left;
+    width: 288px;
+    height: 100%;
+}
+
+.gly {
+    width: 230px;
+    height: 192px;
+    background-image: url(img/science/gly.png);
+    margin: 0 0 130px 55px;
+}
+
+.scienceLeftWrap p,
+.scienceRightWrap p {
+    color: #8e7577;
+    font-size: 18px;
+    line-height: 26px;
+    padding-top: 10px;
+}
+
+.scienceCenterWrap {
+    position: relative;
+    float: left;
+    width: 488px;
+    height: 100%;
+}
+
+.purpleSteam {
+    position: relative;
+    width: 241px;
+    height: 216px;
+    background-image: url(img/science/grape.png);
+    left: 50%;
+    margin-left: -120px;
+}
+
+.funnelBack {
+    position: absolute;
+    width: 488px;
+    height: 438px;
+    background-image: url(img/science/funnelback.png);
+}
+
+.funnelFront {
+    position: absolute;
+    width: 485px;
+    height: 390px;
+    background-image: url(img/science/funnelfront.png);
+    margin-top: 48px;
+}
+
+/*funnelBack & Front는 3차원 속성이기 때문에 나중에 나오는 요소의 z-index값이 더 높다.*/
+.scienceRightWrap {
+    float: left;
+    width: 292px;
+    height: 100%;
+}
+
+.water {
+    width: 204px;
+    height: 191px;
+    background-image: url(img/science/water.png);
+    margin-bottom: 130px;
+}
+
+/*Night*/
+#night1 {
+	width: 100%;
+	height: 700px;
+	background-image: url(img/oneday/night1/night1_bg.png);
+}
+
+.owl {
+	position: absolute;
+	width: 334px;
+	height: 571px;
+	background-image: url(img/oneday/night1/owl.png);
+	margin-top: 50px;
+}
+
+.starWrap {
+	position: relative;
+	width: 750px;
+	height: 400px; 
+	top: 150px;
+	margin-left: 600px;
+}
+
+.star1,
+.star2,
+.star3 {
+	position: absolute;
+	width: 53px;
+	height: 50px;
+	background-image: url(img/oneday/night1/star1.png);
+}
+
+.star1 {
+	margin-top: 350px;
+}
+
+.star2 {
+	margin-left: 650px;
+}
+
+.star3 {
+	margin: 250px 0 0 500px;
+}
