--- a/07.13/mobile.css
+++ b/07.13/mobile.css
@@ -159,4 +159,184 @@
 		margin: 0 0 0 -70px;
 	}
 
+	#forest1 {
+		position: relative;
+		height: 400px;
+		background-image: url(img/mobile/forest/forest1/mobile_forest1_bg.png);
+	}
+	.leftTree {
+		width: 79px;
+		height: 187px;
+		background-image: url(img/mobile/forest/forest1/mobile_lefttree.png);
+	}
+	.treeWrap {
+		width: 68px;
+		height: 129px;
+		top: 200px;
+	}
+	.rabbit1, .rabbit2 {
+		display: none;
+	}
+	.rightTree {
+		width: 68px;
+		height: 129px;
+		background-image: url(img/mobile/forest/forest1/mobile_righttree.png);
+	}
+	#forset2 {
+		position: relative;
+		height: 400px;
+		background-image: url();
+	}
+	.frog {
+		width: 34px;
+		height: 57px;
+		background-image: url(img/mobile/forest/forest2/mobile_frog.png);
+		margin: 0 0 0 20px;
+	}
+	.machineWrap2 {
+		width: 200px;
+		height: 110px;
+		top: 70px;
+		margin-left: -97px;
+	}
+	.machineBottom {
+		width: 141px;
+		height: 60px;
+		background-image: url(img/mobile/forest/forest2/mobile_machinebottom.png);
+		left: 50%;
+		margin: 50px 0 0 -70.5px;
+	}
+	.machineLeft {
+		width: 46px;
+		height: 85px;
+		background-image: url(img/mobile/forest/forest2/mobile_machineleft.png); 
+		margin: 0 0 0 20px;
+	}
+	.machineRight {
+		width: 46px;
+		height: 93px;
+		background-image: url(img/mobile/forest/forest2/mobile_machineright.png); 
+		margin: -10px 0 0 130px;
+	}
+	/*작성된 순서대로 css작업을 해야 원하는대로 배치 가능함*/
+	.forestBubble {
+		position: absolute;
+		width: 161px;
+		top: 290px;
+		left: 50%;
+		margin-left: -83px;   
+	}
+	.forest2Tree {
+		float: right;
+		width: 69px;
+		height: 76px;
+		background-image: url(img/mobile/forest/forest2/mobile_forest2tree.png);
+		top: 130px;
+		margin-right: 20px;
+	}
+	#forest3 {
+		height: 630px;
+		background-image: url(img/mobile/forest/forest3/mobile_forest3_bg.png);
+	}
+	.forest3Wrap {
+		width: 99px;
+		height: 127px;
+		top: 300px;
+	}
+	.forest3Tree {
+		width: 99px;
+		height: 127px;
+		background-image: url(img/mobile/forest/forest3/mobile_forest3tree.png);
+	}
+	.smallBird,
+	.bigBird {
+		display: none;
+	}
+
+	/*Science*/
+	#science {
+		height: 580px;
+		background-image: url(img/mobile/science/mobile_science_bg.png);
+	}
+	.scienceWrap {
+		/*자식의 높이값으로 맞추겠다.*/
+		overflow: hidden;
+		width: 360px;
+		height: auto;
+		top: 180px; 
+	}
+	.scienceLeftWrap {
+		width: 100px;
+	}
+	.gly {
+		width: 76px;
+		height: 63px;
+		background-image: url(img/mobile/science/mobile_gly.png);
+		margin: 0 0 10px 0;
+	}
+	.scienceLeftWrap img,
+	.scienceRightWrap img {
+		height: 15px;
+	}
+	.scienceLeftWrap p,
+	.scienceRightWrap p {
+		display: none;
+	}
+	.scienceCenterWrap{
+		width: 160px;
+		height: 222px;
+	}
+	.purpleSteam {
+		width: 80px;
+		height: 71px;
+		background-image: url(img/mobile/science/mobile_grape.png);
+		margin-left: -40px;
+	}
+	.funnelBack {
+		width: 173px;
+		height: 151px;
+		background-image: url(img/mobile/science/mobile_hopperback.png);
+	}
+	.funnelFront {
+		width: 160px;
+		height: 122px;
+		background-image: url(img/mobile/science/mobile_hopperfront.png);
+		left: 50%;
+		margin: 20px 0 0 -80px;
+	}
+	.scienceRightWrap {
+		width: 100px;
+	}
+	.water {
+		width: 67px;
+		height: 63px;
+		background-image: url(img/mobile/science/mobile_water.png);
+		margin-bottom: 10px;
+		margin-left: 32px;
+	}
+	#night1 {
+		position: relative;
+		height: 500px;
+		background-image: url(img/mobile/oneday/night1/mobile_night1_bg.png);
+	}
+	.owl {
+		width: 88px;
+		height: 151px;
+		background-image: url(img/mobile/oneday/night1/mobile_owl.png);
+		margin-top: 0;
+	}
+	.starWrap {
+		position: absolute;
+		width: 308px;
+		height: 157px;
+		background-image: url(img/mobile/oneday/night1/mobile_star.png);
+		top: 300px;
+		margin-left: 50px;
+	}
+	.star1,
+	.star2,
+	.star3 {
+		display: none;
+	}
+}
 }
