--- a/07.13/style.css
+++ b/07.13/style.css
@@ -601,3 +601,231 @@ button {
 .star3 {
 	margin: 250px 0 0 500px;
 }
+
+
+/*Night2*/
+#night2 {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/oneday/night2/night2_bg.png);
+}
+
+.moon {
+    width: 135px;
+    height: 135px;
+    background-image: url(img/oneday/night2/moon.png);
+}
+
+.night2Bubble {
+    position: absolute;
+    margin: 300px 0 0 80px;
+}
+
+.rightMoonTree {
+    position: absolute;
+    width: 243px;
+    height: 588px;
+    background-image: url(img/oneday/night2/moontree.png);
+    right: 0;
+    bottom: 0;
+}
+
+/*Morning*/
+#morning {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/oneday/morning/morning_bg.png);
+}
+
+.sun {
+    width: 131px;
+    height: 131px;
+    background-image: url(img/oneday/morning/sun.png);
+}
+
+.leftPine {
+    position: absolute;
+    width: 231px;
+    height: 329px;
+    background-image: url(img/oneday/morning/leftpine.png);
+}
+
+.rightPine {
+    position: absolute;
+    width: 294px;
+    height: 609px;
+    background-image: url(img/oneday/morning/rightpine.png);
+    right: 0;
+    bottom: 0;
+}
+
+/*kitchen*/
+#kitchen {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/kitchen/kitchen_bg.png);
+}
+
+.leftPan {
+    float: left;
+    width: 253px;
+    height: 384px;
+    background-image: url(img/kitchen/pan.png);
+}
+
+.rightPan {
+    float: right;
+    width: 243px;
+    height: 132px;
+    background-image: url(img/kitchen/pot.png);
+}
+
+.steamWrap {
+    position: relative;
+    width: 483px;
+    height: 457px;
+    left: 50%;
+    margin-left: -275px;
+    top: -100px;
+    clear: both;
+}
+
+.steam {
+    position: absolute;
+    width: 479px;
+    height: 457px;
+    background-image: url(img/kitchen/steam.png);
+}
+
+.bubble1 {
+    position: absolute;
+    width: 55px;
+    height: 56px;
+    background-image: url(img/kitchen/bubble.png);
+    margin-top: 230px;
+}
+
+.kitchenBubble {
+    position: absolute;
+    top: 400px;
+    right: 0;
+}
+
+/*color1*/
+#color1 {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background-image: url(img/color/color1/color1_bg.png);
+}
+
+.penguin {
+    position: relative;
+    width: 356px;
+    height: 244px;
+    background-image: url(img/color/color1/penguin.png);
+    top: 100px;
+    left: 100px;
+}
+
+.color1Bubble {
+    float: right;
+    margin: 100px 200px 0 0;
+}
+
+/*color2*/
+#color2 {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/color/color2/color2_bg.png);
+}
+
+.horse {
+    float: right;
+    width: 188px;
+    height: 241px;
+    background-image: url(img/color/color2/horse.png);
+    margin: 100px 100px 0 0;
+}
+
+.color2wrap {
+    clear: both;
+    position: relative;
+    width: 500px;
+    top: 100px;
+    margin-left: 50px;
+}
+
+.color2Bubble {
+    margin-bottom: 30px;
+}
+
+.wrap {
+    margin-bottom: 20px;
+}
+
+.red,
+.yellow,
+.blue {
+    width: 59px;
+    height: 82px;
+}
+
+.red {
+    background-image: url(img/color/color2/btn/btn_red.png);
+}
+
+.yellow {
+    background-image: url(img/color/color2/btn/btn_yellow.png);
+}
+
+.blue {
+    background-image: url(img/color/color2/btn/btn_blue.png);
+}
+
+.color2Comment {
+    color: #8e7577;
+}
+
+/*color3*/
+#color3 {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    background-image: url(img/color/color3/color3_bg.png);
+}
+
+.flag {
+    position: relative;
+    width: 1774px;
+    height: 178px;
+    background-image: url(img/color/color3/flag.png);
+    left: 50%;
+    margin-left: -887px;
+}
+
+.book {
+    float: right;
+    width: 417px;
+    height: 178px;
+    background-image: url(img/color/color3/book.png);
+}
+
+.logo {
+    position: absolute;
+    left: 50%;
+    margin-left: -378.5px;
+}
+
+.dice {
+    position: absolute;
+    width: 239px;
+    height: 200px;
+    background-image: url(img/color/color3/dice.png);
+    left: 0;
+    bottom: 0;
+}
