--- a/07.19/naver/style.css
+++ b/07.19/naver/style.css
@@ -529,3 +529,236 @@ main {
 #main_footer .corp_list li a { 
     font-size: 12px;
 }
+
+
+/*shop*/
+#shop_body {
+    background-color: #E9ECEF;
+}
+
+.shop_container {
+    width: 1280px;
+    margin: 0 auto;
+}
+
+/*shop_header*/
+#shop_header_top {
+    width: 100%;
+    height: 36px;
+    /*background-color: #03c75a;*/
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+#shop_header_middle {
+    width: 100%;
+    height: 66px;
+    /*background-color: #03c75a;*/
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.white_line {
+    position: relative;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.shop_header_bg {
+    background: url(bg.jpg)no-repeat 100% 0;
+}
+
+#shop_header nav {
+    width: 100%;
+    border-top: solid 1px #e8e8e8;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.14);
+    background-color: #fff;
+}
+
+#shop_header .shop_nav_left {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 13px 8px;
+}
+
+#shop_header .shop_nav_left li {
+    margin-right: 16px;
+    font-size: 12px;
+    line-height: 12px;
+}
+
+/*shop_main*/
+#shop_main {}
+
+#shop_main .list_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#shop_main .list_item {
+    width: 308px;
+    height: 496px;
+    background-color: rgba(0, 0, 0, .1);
+    margin-bottom: 20px;
+}
+
+/*shop_list_item 1*/
+.category_wrap {
+    overflow: hidden;
+}
+
+.shop_border {
+    border: solid 1px #ced2d7;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.category_left {
+    position: relative;
+    float: left;
+    width: 124px;
+    height: 100%;
+    background-color: #333949;
+}
+
+.category_hamburger {
+    position: absolute;
+    left: 14px;
+    top: 19px;
+    width: 10px;
+    height: 10px;
+}
+
+.h3_span {
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.46);
+}
+
+.span1 {
+    top: 0;
+    left: 0;
+}
+
+.span2 {
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+}
+
+.span3 {
+    bottom: 0;
+    left: 0;
+}
+
+.category_left h3 {
+    margin-left: 20px;
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.46);
+    padding: 14px 0 14px 13px;
+}
+
+.category_left ul {
+    margin: 3px 0;
+}
+
+.category_left li {
+    width: 100%;
+    height: 37px;
+}
+
+.category_left a {
+    display: block;
+    line-height: 15px;
+    font-size: 13px;
+    font-weight: bold;
+    margin-left: 10px;
+    color: rgba(255, 255, 255, 0.46);
+    padding: 7px 8px;
+}
+
+/*border값 뺀 나머지 너비 크기 지정*/
+.category_wrap .category_right {
+    float: right;
+    width: 182px;
+    height: 100%;
+    background-color: #fff;
+}
+
+.category_right_top {
+    width: 100%;
+    height: 306px;
+    border-bottom: #e7e7e7;
+    text-align: center;
+    border-bottom: solid 1px rgb(240, 240, 240);
+}
+
+.category_info {
+    padding: 20px 0;
+}
+
+.headline {
+    /*span은 inline요소 > margin값 X*/
+    display: inline-block;
+    font-size: 11px;
+    border: solid 1px #00ab33;
+    color: #00ab33;
+    margin-bottom: 10px;
+}
+
+.category_info h3 {
+    font-size: 18px;
+}
+
+.price {
+    font-size: 15px;
+    color: skyblue;
+    font-weight: bold;
+}
+
+.category_info img {
+    margin: 8px 0;
+
+}
+
+.category_right_bottom {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.category_right_bottom .headline {
+    margin-top: 6px;
+}
+
+.tag {
+    display: inline-block;
+    width: auto;
+    height: 24px;
+    line-height: 12px;
+    font-size: 12px;
+    vertical-align: top;
+    background-color: #e8eef4;
+    margin: 6px 1px 0 1px;
+    padding: 5px;
+}
+
+.tag a {
+    color: #666;
+}
+
+/*shop_list_item 2*/   
+.list_wrap .list_item.banner img {
+    width: 100%;
+    height: 100%; 
+}
