--- a/07.19/naver/blog.css
+++ b/07.19/naver/blog.css
@@ -472,3 +472,282 @@ button {
     height: 167px;
     background-color: gray;
 }
+
+
+/*main_right*/
+.blog_main_right {
+    position: relative;
+    width: 280px;
+    height: 1500px;
+    background-color: rgba(0, 0, 0, 0.07);
+}
+
+/*blog_account*/
+#blog_account {
+    padding: 20px 15px 19px;
+    background-color: #f5f5f6;
+    border: 1px solid #dddddf;
+}
+
+#blog_account p {
+    font-size: 11px;
+    color: #888;
+    margin-bottom: 7px;
+}
+
+#blog_account a {
+    display: block;
+    line-height: 14px;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    padding: 14px 0 14px;
+    border-radius: 5px;
+    border: 1px solid #dddddf;
+    background-color: #fff;
+}
+
+.account_sub_wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.account_sub_wrap span {
+    cursor: pointer;
+}
+
+#blog_account span {
+    font-size: 11px;
+    color: #888;
+}
+
+.account_sub {
+    position: relative;
+    font-size: 11px;
+    color: #888;
+}
+
+.account_sub>span {
+    padding-right: 8px;
+}
+
+.account_sub>.bar {
+    position: absolute;
+    left: 31%;
+    top: 3px;
+    width: 1px;
+    height: 10px;
+    background-color: #dddddf;
+    padding: 0;
+}
+
+#blog_banner {
+    width: 280px;
+    height: 240px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: 1px solid #dddddf;
+}
+
+#blog_guide {
+    border: 1px solid #dddddf;
+    border-width: 0 1px 1px;
+    padding: 19px 20px;
+    background-color: #fff;
+}
+
+#blog_guide a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#blog_guide a p {
+    width: 145px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #222;
+}
+
+#blog_guide a p span {
+    font-size: 18px;
+    font-weight: 800;
+}
+
+#blog_guide a i {
+    display: inline-block;
+    width: 88px;
+    height: 65px;
+    background-color: green;
+}
+
+/*blog_notice*/
+#blog_notice {
+    border: 1px solid #dddddf;
+    background-color: #fff;
+    border-width: 0 1px 1px;
+    padding: 24px 22px 22px;
+}
+
+.blog_notice_title_wrap {
+    margin-bottom: 13px;
+}
+
+.blog_notice_title_wrap a {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.blog_notice_title_wrap a h3 {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.blog_notice_title_wrap a i {
+    width: 8px;
+    height: 13px;
+    background-color: #000;
+}
+
+.blog_notice_list {
+    font-size: 12px;
+}
+
+/*https://junistory.blogspot.com/2017/06/css-ellipsis.html*/
+.blog_notice_list li {
+    margin-bottom: 4px;
+    width: 220px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.blog_notice_list li:last-child {
+    margin-bottom: 0;
+}
+
+/*blog_helper*/
+#blog_helper {
+    border: 1px solid #dddddf;
+    background-color: #fff;
+    border-width: 0 1px 1px;
+    padding: 24px 16px 20px;
+}
+
+.blog_helper_list {}
+
+.blog_helper_list li {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    height: 34px;
+    margin-bottom: 10px;
+}
+
+.blog_helper_list li a:hover {
+    text-decoration: underline;
+}
+
+.blog_helper_icon {
+    position: absolute;
+    left: 5px;
+    top: 53%;
+    transform: translateY(-50%);
+    width: 21px;
+    height: 21px;
+    vertical-align: middle;
+    background-size: 21px 21px;
+    color: #000;
+}
+
+.icon1 {
+    background: url('naver.png') no-repeat;
+    background-position: -880px -439px;
+}
+
+.icon2 {
+    background: url('naver.png') no-repeat;
+    background-position: -996px -439px;
+}
+
+.icon3 {
+    background: url('naver.png') no-repeat;
+    background-position: -967px -439px;
+}
+
+.icon4 {
+    background: url('naver.png') no-repeat;
+    background-position: -787px -439px;
+}
+
+.icon5 {
+    background: url('naver.png') no-repeat;
+    background-position: -1025px -439px;
+}
+
+.icon6 {
+    background: url('naver.png') no-repeat;
+    background-position: -909px -439px;
+}
+
+.icon7 {
+    background: url('naver.png') no-repeat;
+    background-position: -966px -471px;
+}
+
+.blog_helper_list a {
+    padding-left: 38px;
+    font-size: 14px;
+    line-height: 34px;
+}
+
+/*footer*/
+#blog_footer {
+    padding-top: 40px;
+    padding-bottom: 55px;
+    background-color: #f6f6f6;
+}
+
+#blog_footer .blog_container {
+    text-align: center;
+}
+
+#blog_footer ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+#blog_footer ul li {
+    margin-left: 7px;
+    font-size: 13px;
+}
+
+#blog_footer ul li:first-child {
+    margin-left: 0;
+}
+
+#blog_footer ul li a:before { 
+    content: '';
+    display: inline-block;
+    width: 1px;
+    height: 12px;
+    background-color: #d7d7d7;
+    vertical-align: -1px;
+    margin: 0 20px;
+}
+
+#blog_footer ul li:first-child a:before {
+    content: initial;
+}
+
+#blog_footer p { 
+    display: block;
+    font-size: 10px;
+    margin: 0 auto;
+}
