--- a/07.19/naver/game.css
+++ b/07.19/naver/game.css
@@ -265,6 +265,10 @@ button {
     background-color: #F8F9FD;
 }
 
+#game_main .game_container {
+    align-items: stretch;
+}
+
 .game_section {
     position: relative;
     background-color: #fff;
@@ -574,7 +578,7 @@ button {
     position: relative;
 }
 
-#game_section_5 .reserve { 
+#game_section_5 .reserve {
     position: absolute;
     top: -5px;
     left: -5px;
@@ -613,7 +617,7 @@ button {
 }
 
 #game_section_6 ol li {
-    width: 407px; 
+    width: 407px;
     border: none;
     margin-bottom: 5px;
 }
@@ -628,3 +632,325 @@ button {
     width: 334px;
     margin: 0;
 }
+
+/*right*/
+.right {}
+
+/*visitor*/
+#visitor_section.right_section {
+    position: relative;
+    width: 357px;
+    height: 194px; 
+    padding: 30px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 30px 0 rgb(0 0 0 / 6%);
+    text-align: center;
+    margin-bottom: 25px;
+}
+ 
+.right_section .title_wrap h2 {
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.right_section .title_wrap a {
+    font-size: 13px;
+    font-weight: 400;
+    color: #444;
+}
+
+#visitor_section .right_section_body {
+    margin-top: 29px;
+}
+
+.right_section_body .text_wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right_section_body .text_wrap p {
+    font-size: 13px;
+    color: #9da5b6;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.right_section_body .input_wrap {
+    position: relative;
+    display: flex;
+    width: 250px;
+    height: 44px;
+    background-color: #f5f6fa;
+    border-radius: 12px;
+    margin-bottom: 18px;
+    overflow: hidden;
+}
+
+.right_section_body .input_wrap input {
+    width: calc(100% - 44px);
+    height: 100%;
+    padding: 10px 16px;
+    border: none;
+    font-size: 15px;
+    background-color: #f5f6fa;
+    color: #444;
+}
+
+.text_wrap .input_wrap button {
+    width: 44px;
+    height: 100%;
+    background-color: gray;
+    cursor: pointer;
+}
+
+/*popular*/
+#popular_section.right_section {
+    position: relative;
+    width: 357px; 
+    padding: 30px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 30px 0 rgb(0 0 0 / 6%);
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+#popular_section .right_section_body {
+    margin-top: 20px;
+}
+
+.right_section_body ol {
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between; 
+    height: 339px;
+}
+
+#popular_section .image_wrap {
+    position: relative;
+}
+
+.popular_img_more {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+    background-color: #7776FF;
+}
+
+.popular_img_more span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 2px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 1px;
+}
+
+.popular_img_more span:nth-child(2) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(90deg);
+    width: 2px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 1px;
+}
+
+.popular_img {
+    width: 55px;
+    height: 55px;
+    border-radius: 12px;
+    border: 1px solid gray;
+}
+
+#popular_section .txt_wrap {
+    width: 130px;
+    text-align: left;
+    margin-right: 49px;
+}
+
+.txt_wrap h3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 15px;
+    color: #000;
+}
+.txt_wrap span {
+    font-size: 13px;
+    color: #999;
+}
+
+.popular_arrow {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    transform: rotate(90deg); 
+}
+
+.popular_arrow span {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 2px;
+    height: 10px;
+    transform: rotate(45deg);
+    background-color: gray;
+}
+
+.popular_arrow span:nth-child(2) {
+    position: absolute;
+    bottom: 0%;
+    left: 40%;
+    width: 2px;
+    height: 10px;
+    transform: rotate(135deg);
+    background-color: gray;
+}
+
+.popular_bottom {
+    text-align: left;
+    font-size: 13px;
+    color: #999;
+    margin-top: 15px;
+}
+
+.popular_bottom div {
+    display: inline-block;
+    width: 10px; 
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 9px;
+    background-color: #999;
+}
+
+/*news*/
+#news_section.right_section {
+    position: relative;
+    width: 357px; 
+    padding: 30px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 30px 0 rgb(0 0 0 / 6%);
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+#news_section .right_section_body {
+    margin-top: 20px;
+}
+
+#news_section ul li {
+    position: relative;
+    width: 287px;
+    margin-bottom: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#news_section ul li div {
+    position: absolute; 
+    top: 10px;
+    left: 0px;
+    width: 3px;
+    height: 3px;  
+    background-color: gray; 
+}
+
+#news_section ul li a {
+    font-size: 15px;
+    color: #000;
+    padding-left: 10px;
+}
+
+/*weekly*/
+#weekly_section.right_section {
+    position: relative;
+    width: 357px; 
+    padding: 30px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 30px 0 rgb(0 0 0 / 6%);
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+#weekly_section .section_body_wrap_img {
+    width: 128px;
+    height: 74px;
+    border-radius: 8px;
+    background-color: gray;
+}
+
+#weekly_section .txt {
+    text-align: left;
+}
+
+#weekly_section .popular_arrow span {
+    background-color: #dedede;
+    width: 1.5px;
+}
+
+#weekly_section .popular_arrow span:nth-child(2) {
+    left: 6px;
+}
+ 
+#right_banner_section {
+    position: relative;
+    width: 357px; 
+    height: 190px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 30px 0 rgb(0 0 0 / 6%); 
+    margin: 25px 0;
+    cursor: pointer;
+}
+
+/*footer*/
+#footer_section {
+    position: relative;
+    width: 357px; 
+    height: 190px;
+    border-radius: 12px; 
+    margin: 25px 0; 
+}
+
+#footer_section a {
+    position: relative;
+    display: inline-block;
+    font-size: 12px;
+    color: #666;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+#footer_section a:nth-child(1),
+#footer_section a:nth-child(4), 
+#footer_section a:nth-child(6) {
+    padding-left: 0;
+}
+
+#footer_section a:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 3px;
+    width: 1px;
+    height: 10px;
+    background-color: #666;
+}
+ 
+#footer_section a:nth-child(6):after {
+    display: none;
+}
+ 
